istio_configuration/ingress-gateway.yaml
# Here we define the point of ingress, the gateway name is flask-gateway. With the selector ingressgateway we choose to use the default ingress giving by Istio control plane
# We are exposing port 80 to the protocol HTTP for the hosts tfg.com any other request that comes requesting a different host will get an 404
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "tfg.com"
