istio_configuration/catalog-virtualservice-dark-v2.yaml
# With this configuration all the request tha has the header x-dark-launch with the value v2 will be send to the pod that has the v2 of catalog and the rest 
# will be routed to version 1. The subsets are defined on the destination rules
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - match:
    - headers:
        x-dark-launch:
          exact: "v2"
    route:
    - destination:
        host: catalog
        subset: version-v2
  - route:
    - destination:
        host: catalog
        subset: version-v1
