istio_configuration/istio_destination_rule.yaml
#With this we will let Istio know how to differenciate between different versions of our catalog service
#Here we create 2 subsets, the pods with host catalog will be differenciate by the label version, the pods that have
#version v1 will be assing to subset version-v1 and pods that have the version v2 will be assing to subset version-v2
#
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: catalog
spec:
  host: catalog
  subsets:
  - name: version-v1
    labels:
      version: v1
  - name: version-v2
    labels:
      version: v2
